fix(Textarea): add overflow: hidden

--- a/packages/vkui/src/components/Textarea/Textarea.module.css
+++ b/packages/vkui/src/components/Textarea/Textarea.module.css
@@ -1,4 +1,5 @@
 .Textarea {
+  overflow: hidden;
   position: relative;
 }
 
